# python-flint

./: .cirrus.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README  README.md  coverage_plugin.py  flint.pxd  index.html  meson.build  meson.options  pip install python-flint  pyflint.pxd  pyflint.pyx  pyproject.toml  requirements-dev.txt  ruff.toml  setup.py  test.c  test.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/patches/: 0001-Fix-signature-of-mpn_mod_ctx_clear.patch
.github/workflows/: build_test.yml  buildwheel.yml  ci-emscripten.yml  ci-sage.yml  lint.yml  zizmor.yml
benchmarks/: simple_benchmarks.py  utils.py
doc/: Makefile  conf.py
doc/source/: _gr.rst  acb.rst  acb_mat.rst  acb_poly.rst  acb_series.rst  acb_theta.rst  arb.rst  arb_mat.rst  arb_poly.rst  arb_series.rst  build.rst  conf.py  dirichlet.rst  fmpq.rst  fmpq_mat.rst  fmpq_mpoly.rst  fmpq_poly.rst  fmpq_series.rst  fmpz.rst  fmpz_mat.rst  fmpz_mod.rst  fmpz_mod_mat.rst  fmpz_mod_mpoly.rst  fmpz_mod_poly.rst  fmpz_mpoly.rst  fmpz_poly.rst  fmpz_series.rst  fq_default.rst  fq_default_poly.rst  general.rst  index.rst  install.rst  nmod.rst  nmod_mat.rst  nmod_mpoly.rst  nmod_poly.rst  nmod_series.rst  setup.rst  workflow.rst
src/: acb.pyx  acb_mat.pyx  acb_poly.pyx  acb_series.pyx  arb.pyx  arb_mat.pyx  arb_poly.pyx  arb_series.pyx  arf.pyx  dirichlet.pyx  flint.pxd  fmpq.pyx  fmpq_mat.pyx  fmpq_poly.pyx  fmpq_series.pyx  fmpz.pyx  fmpz_mat.pyx  fmpz_mpoly.pyx  fmpz_poly.pyx  fmpz_series.pyx  functions.pyx  nmod.pyx  nmod_mat.pyx  nmod_poly.pyx  pyflint.pxd  pyflint.pyx
src/flint/: __init__.py  _acb.pxd  _acb.pyx  _acb_mat.pyx  _acb_poly.pyx  _acb_series.pxd  _acb_series.pyx  _arb.pyx  _arb_mat.pxd  _arb_mat.pyx  _arb_poly.pyx  _arb_series.pyx  _arf.pxd  _arf.pyx  _flint.pxd  _fmpq.pyx  _fmpq_mat.pxd  _fmpq_mat.pyx  _fmpq_poly.pyx  _fmpq_series.pxd  _fmpq_series.pyx  _fmpz.pxd  _fmpz_mat.pxd  _fmpz_mat.pyx  _fmpz_mpoly.pyx  _fmpz_poly.pxd  _fmpz_poly.pyx  _fmpz_series.pxd  _fmpz_series.pyx  _global_context.pxd  _global_context.pyx  _nmod.pyx  _nmod_mat.pyx  _nmod_poly.pyx  acb.pyx  acb_mat.pyx  acb_poly.pyx  acb_series.pyx  arb.pxd  arb.pyx  (+31 more)
src/flint/flint_base/: flint_base.pxd  flint_base.pyi  flint_base.pyx  flint_context.pxd  flint_context.pyi  flint_context.pyx  meson.build
src/flint/flintlib/: README.md  acb.pxd  acb_calc.pxd  acb_dft.pxd  acb_dirichlet.pxd  acb_elliptic.pxd  acb_hypgeom.pxd  acb_mat.pxd  acb_modular.pxd  acb_poly.pxd  acb_theta.pxd  acb_types.pxd  arb.pxd  arb_fmpz_poly.pxd  arb_hypgeom.pxd  arb_mat.pxd  arb_poly.pxd  arb_types.pxd  arf.pxd  arf_types.pxd  arith.pxd  arith_types.pxd  bernoulli.pxd  dirichlet.pxd  flint.pxd  fmpq.pxd  fmpq_mat.pxd  fmpq_mpoly.pxd  fmpq_mpoly_factor.pxd  fmpq_poly.pxd  fmpq_vec.pxd  fmpz.pxd  fmpz_factor.pxd  fmpz_lll.pxd  fmpz_mat.pxd  fmpz_mod.pxd  fmpz_mod_mat.pxd  fmpz_mod_mpoly.pxd  fmpz_mod_mpoly_factor.pxd  fmpz_mod_poly.pxd  (+38 more)
src/flint/flintlib/functions/: acb.pxd  acb_calc.pxd  acb_dft.pxd  acb_dirichlet.pxd  acb_elliptic.pxd  acb_hypgeom.pxd  acb_mat.pxd  acb_modular.pxd  acb_poly.pxd  acb_theta.pxd  arb.pxd  arb_hypgeom.pxd  arb_mat.pxd  arb_poly.pxd  arf.pxd  arith.pxd  bernoulli.pxd  compat.pxd  dirichlet.pxd  flint.pxd  fmpq.pxd  fmpq_mat.pxd  fmpq_mpoly.pxd  fmpq_mpoly_factor.pxd  fmpq_poly.pxd  fmpq_vec.pxd  fmpz.pxd  fmpz_factor.pxd  fmpz_lll.pxd  fmpz_mat.pxd  fmpz_mod.pxd  fmpz_mod_mat.pxd  fmpz_mod_mpoly.pxd  fmpz_mod_mpoly_factor.pxd  fmpz_mod_poly.pxd  fmpz_mod_poly_factor.pxd  fmpz_mod_vec.pxd  fmpz_mpoly.pxd  fmpz_mpoly_factor.pxd  fmpz_mpoly_q.pxd  (+40 more)
src/flint/flintlib/types/: acb.pxd  acb_calc.pxd  acb_dirichlet.pxd  acb_theta.pxd  arb.pxd  arf.pxd  arith.pxd  dirichlet.pxd  flint.pxd  fmpq.pxd  fmpz.pxd  fmpz_mod.pxd  fmpz_mod_mat_compat.pxd  fmpz_mod_poly.pxd  fq.pxd  fq_default.pxd  fq_nmod.pxd  fq_zech.pxd  gr.pxd  mpoly.pxd  nmod.pxd  qfb.pxd  undocumented.pxd
src/flint/functions/: meson.build  showgood.pyx
src/flint/test/: __main__.py  helpers.py  meson.build  test.py  test_acb.py  test_acb_mat.py  test_acb_poly.py  test_acb_series.py  test_acb_theta.py  test_all.py  test_arb.py  test_arb_mat.py  test_arb_poly.py  test_arb_series.py  test_dirichlet.py  test_docstrings.py  test_fmpq_vec.py  test_fmpz_vec.py
src/flint/types/: _gr.pxd  _gr.pyx  acb.pxd  acb.pyi  acb.pyx  acb_mat.pxd  acb_mat.pyi  acb_mat.pyx  acb_poly.pxd  acb_poly.pyi  acb_poly.pyx  acb_series.pxd  acb_series.pyi  acb_series.pyx  acb_theta.pyi  acb_theta.pyx  arb.pxd  arb.pyi  arb.pyx  arb_mat.pxd  arb_mat.pyi  arb_mat.pyx  arb_poly.pxd  arb_poly.pyi  arb_poly.pyx  arb_series.pxd  arb_series.pyi  arb_series.pyx  arf.pxd  arf.pyi  arf.pyx  dirichlet.pxd  dirichlet.pyi  dirichlet.pyx  fmpq.pxd  fmpq.pyi  fmpq.pyx  fmpq_mat.pxd  fmpq_mat.pyi  fmpq_mat.pyx  (+69 more)
src/flint/utils/: conversion.pxd  flint_exceptions.py  meson.build  typecheck.pxd
test/: dtest.py  test.py
wheels/: LICENSE_linux_wheels.txt  LICENSE_macos_wheels.txt  LICENSE_windows_wheels.txt
