thisdir = 'flint/test'

pyfiles = [
  '__init__.py',
  '__main__.py',
  'helpers.py',
  'test_all.py',
  'test_acb.py',
  'test_acb_mat.py',
  'test_acb_poly.py',
  'test_acb_series.py',
  'test_arb.py',
  'test_arb_mat.py',
  'test_arb_series.py',
  'test_arb_poly.py',
  'test_fmpq_vec.py',
  'test_fmpz_vec.py',
  'test_docstrings.py',
]

py.install_sources(
  pyfiles,
  pure: false,
  subdir: thisdir,
)
